[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levelinteface/waitingroom.gd" type="Script" id=1]
[ext_resource path="res://Header.tres" type="Theme" id=2]
[ext_resource path="res://lobby/Header.tres" type="DynamicFont" id=3]
[ext_resource path="res://Buttons.tres" type="DynamicFont" id=4]
[ext_resource path="res://TitleMenu.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.356863, 0.0901961, 0.0509804, 1 )

[sub_resource type="Theme" id=2]
default_font = ExtResource( 5 )
ItemList/colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
ItemList/styles/bg = SubResource( 1 )
ItemList/styles/bg_focus = null

[node name="WaitingRoom" type="Popup" groups=["WaitingRoom"]]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.380392, 0.12549, 0.0156863, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 0.0990172

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 180.0
margin_top = 109.0
margin_right = 844.0
margin_bottom = 491.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 664.0
margin_bottom = 71.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_colors/font_outline_modulate = Color( 0.00392157, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Waitingrooom"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 664.0
margin_bottom = 198.0

[node name="ItemList" type="ItemList" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 232.0
margin_right = 432.0
margin_bottom = 117.0
rect_min_size = Vector2( 200, 0 )
theme = SubResource( 2 )
custom_constants/vseparation = 10
items = [ "Player 1", null, false, " Player 2", null, false, "Player 3", null, false ]
auto_height = true
same_column_width = true
fixed_column_width = 200
icon_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 664.0
margin_bottom = 248.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 279.0
margin_top = 1.0
margin_right = 304.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 5 )
text = "AI"

[node name="AI" type="CheckButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 384.0
margin_bottom = 40.0

[node name="Difficulty" type="OptionButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 372.0
margin_right = 401.0
margin_bottom = 40.0

[node name="RdyButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 664.0
margin_bottom = 315.0
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Ready"
flat = true

[node name="Quitbtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 664.0
margin_bottom = 382.0
custom_colors/font_color = Color( 0.921569, 0.764706, 0.462745, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Quit"
flat = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/AI" to="." method="_on_AI_pressed"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer/HBoxContainer/Difficulty" to="." method="_on_Difficulty_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quitbtn" to="." method="_on_Quitbtn_pressed"]
